getFirst() changed to get(0) in test cases as well